nav bar alignment , beneficiary hamberger button , sub headings alighnments issues solved

--- a/src/asset/css/basiclayout.css
+++ b/src/asset/css/basiclayout.css
@@ -68,6 +68,7 @@ hr {
   width: 100%;
   border-bottom: 1px solid #1f1209;
   box-shadow: 0 20px 20px -20px #333;
+  opacity:5%;
 }
 .docHead {
   color: rgba(255, 0, 0, 0.147);
@@ -214,7 +215,7 @@ fa-copy {
 }
 
 .menuItem:hover{
-  font-size: 1.1rem;
+  border-bottom:1px solid var(--menu-hover);
 }
 
  .list-group {
@@ -352,7 +353,7 @@ a {
   position: absolute;
   top: 15px;
   gap: 20px;
-  left: 50px;
+  left: 30px;
 }
 .scrollbar {
   position: relative;
@@ -361,8 +362,9 @@ a {
 /* code section */
 
 .code-wrapper {
-  border-radius: 4px;
-  margin: 10px;
+  border-radius: 2px;
+  margin: 0.125rem;
+  margin-top: 1.1rem;
   padding: 0;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.2);
