--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -15,4 +15,5 @@
   --accordian-logo: url("../asset/images/down-arrow-red.png");
   --paymento-logo: url("../asset/images/logo_blue.png");
   --accordion-active-color:#D0482A;
+  --menu-hover : #D0482A;
 }
